<resources>
    <string name="app_name">Mailbox</string>
    <string name="icon">App_Icon</string>
    <string name="timestamp_text">Post was delivered at</string>
    <string name="remove_notification">Remove notification</string>
    <string name="logo_icon_name">Logo</string>
    <string name="alert_icon_name">Alert</string>
    <string name="bt_icon_name">Bluetooth</string>
    <string name="logs_icon_name">Logs</string>
    <string name="postbox">postbox</string>
    <string name="delete_button">Delete button</string>
    <string name="signup_button">Signup</string>
    <string name="username_guidance">Username: </string>
    <string name="password_guidance">Password</string>
    <string name="username">Username</string>
    <string name="login_button">Login</string>
    <string name="username_pref">username</string>
    <string name="base_url">https://robinlunde.com/api/</string>
    <string name="post_info_url">https://robinlunde.com/api/posts</string> <!-- DELETE! -->
    <string name="post_update_url">https://robinlunde.com/api/post/status</string> <!-- DELETE! -->
    <string name="sendLogsMethod">sendLog</string>
    <string name="get_logs">getLogs</string>
    <string name="deleteLogsMethod">deleteLog</string>
    <string name="user_header">User</string>
    <string name="delivered_header">Delivered</string>
    <string name="pickup_header">PickUp</string>
    <string name="no_new_post_message">No new post detected!</string>
    <string name="nice_day_message">Have a nice day!</string>
    <string name="channel_name">Mail_Alert_Channel</string>
    <string name="channel_description">Channel for alerting users of new mail</string>
    <string name="channel_id">MailboxChannel</string>
    <string name="bt_id_integer">1337</string>
    <string name="get_last_status_update_method">getLastUpdate</string>
    <string name="set_last_status_update_method">setLastUpdate</string>
    <string name="last_update_not_found">No data found for last update from mailbox!</string>
    <string name="last_update_not_new_string"><![CDATA[Last update was at %1$s %2$s by <b>%3$s</b>!]]></string>
    <string name="last_update_new_string">Last update seen by: </string>
    <string name="no_status_yet_username">nodata</string>
    <string name="no_status_yet_string">No status data available!</string>
    <string name="bgScan">BackgroundScan</string>
    <string name="activeScan">ActiveScan</string>
    <string name="rssiSignal">RSSI Signal: %1$d</string>
    <string name="pill_icon_name">Pills</string>
    <string name="set_alarm_button">Set alarm</string>
    <string name="cancel_alarm_button">Cancel alarm</string>
    <string name="pill_taken">Pill taken</string>
    <string name="new_pill">Create pill</string>
    <string name="update_pill">Update pill</string>
    <string name="pill_history">Pill log</string>
    <string name="pill_header">Pill</string>
    <string name="date_header">Date</string>
    <string name="taken_header">Taken</string>
    <string name="pill_create_button">Create</string>
    <string name="cancel_button">Cancel</string>
    <string name="pill_input_field">Name</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thur">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="is_pill_active">Active</string>
    <string name="update_button">Update button</string>
    <string name="no_content">Error: No content received</string>
    <string name="pill_num">%1$d.</string>
</resources>