<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/frag_alert"
    tools:layout="@layout/fragment_alert"
    tools:context="com.robinlunde.mailbox.alert.AlertFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorSecondary">

        <TextView
            android:id="@+id/timestamp_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_new_post_message"
            android:textSize="36sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.100000024" />

        <TextView
            android:id="@+id/timestamp_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center|center_horizontal|center_vertical"
            android:textSize="26sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timestamp_text"
            app:layout_constraintVertical_bias="0.100000024" />

        <TextView
            android:id="@+id/timestamp_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center|center_horizontal|center_vertical"
            android:text="@string/nice_day_message"
            android:textSize="24sp"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/clear_notify_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timestamp_time"
            app:layout_constraintVertical_bias="0.060000002" />

        <Button
            android:id="@+id/clear_notify_btn"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:background="@drawable/round_button"
            android:fontFamily="@font/alegreya_sans"
            android:gravity="center"
            android:hapticFeedbackEnabled="true"
            android:text="@string/remove_notification"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#000"
            android:textSize="24sp"
            android:textStyle="bold"
            android:visibility="invisible"
            app:backgroundTint="?attr/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timestamp_time"
            app:layout_constraintVertical_bias="0.598"
            app:strokeColor="#000000" />

        <ImageView
            android:id="@+id/post_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/postbox"
            android:scaleX="4"
            android:scaleY="4"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timestamp_text"
            app:layout_constraintVertical_bias="0.65"
            app:srcCompat="@mipmap/post_box_foreground" />

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_update_not_found"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/post_box"
            app:layout_constraintVertical_bias="0.89" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>