<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frag_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorSecondary">

        <ImageView
            android:id="@+id/logo_mainactiv"
            android:layout_width="330dp"
            android:layout_height="330dp"
            android:contentDescription="@string/logo_icon_name"
            app:layout_constraintBottom_toTopOf="@+id/divider_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/mailbox_appicon_foreground" />

        <View
            android:id="@+id/divider_login"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_input_holder"
            android:layout_width="320dp"
            android:layout_height="64dp"
            android:layout_marginBottom="10dp"
            android:gravity="center|center_horizontal|center_vertical"
            app:layout_constraintBottom_toTopOf="@id/password_input_holder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider_login"
            app:layout_constraintVertical_chainStyle="packed">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|center_horizontal|center_vertical"
                android:hint="@string/username"
                android:textSize="24sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_input_holder"
            android:layout_width="320dp"
            android:layout_height="64dp"
            android:layout_marginBottom="10dp"
            android:gravity="center|center_horizontal|center_vertical"
            app:layout_constraintBottom_toTopOf="@id/login_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username_input_holder"
            app:layout_constraintVertical_chainStyle="packed">

            <EditText
                android:id="@+id/password_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center|center_horizontal|center_vertical"
                android:hint="@string/password_guidance"
                android:inputType="textPassword"
                android:textSize="24sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/colorOnSecondary"
            android:hapticFeedbackEnabled="true"
            android:shadowDx="1.0"
            android:shadowRadius="1"
            android:text="@string/login_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/signup_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username_input_holder" />

        <Button
            android:id="@+id/signup_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/colorOnSecondary"
            android:hapticFeedbackEnabled="true"
            android:shadowDx="1.0"
            android:shadowRadius="1"
            android:text="@string/signup_button"
            app:layout_constraintBottom_toBottomOf="@id/login_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/login_button"
            app:layout_constraintTop_toTopOf="@+id/login_button" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>