<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pill_row"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="8dp"
    android:paddingEnd="8dp">

    <CheckBox
        android:id="@+id/active_pill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:hapticFeedbackEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/active_pill_text"
        app:layout_constraintEnd_toStartOf="@+id/update_pill_name_holder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/update_pill_name_holder" />

    <TextView
        android:id="@+id/active_pill_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/is_pill_active"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/update_pill_name_holder"
        app:layout_constraintEnd_toEndOf="@+id/active_pill"
        app:layout_constraintStart_toStartOf="@id/active_pill"
        app:layout_constraintTop_toBottomOf="@+id/active_pill" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/update_pill_name_holder"
        android:layout_width="160dp"
        android:layout_height="54dp"
        android:layout_margin="30dp"
        app:layout_constraintBottom_toTopOf="@+id/pill_uuid"
        app:layout_constraintEnd_toStartOf="@+id/update_pill_color"
        app:layout_constraintStart_toEndOf="@id/active_pill"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/update_pill_name_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/pill_input_field"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/update_pill_color"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:background="@color/grey"
        android:hapticFeedbackEnabled="true"
        app:layout_constraintBottom_toBottomOf="@id/update_pill_name_holder"
        app:layout_constraintEnd_toStartOf="@+id/delete_pill_button"
        app:layout_constraintStart_toEndOf="@+id/update_pill_name_holder"
        app:layout_constraintTop_toTopOf="@+id/update_pill_name_holder" />

    <ImageButton
        android:id="@+id/delete_pill_button"
        android:layout_width="32dp"
        android:layout_height="31dp"
        android:layout_marginTop="2dp"
        android:layout_weight="1"
        android:background="?attr/colorOnSecondary"
        android:contentDescription="@string/delete_button"
        android:hapticFeedbackEnabled="true"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:src="@android:drawable/ic_menu_delete"
        app:layout_constraintBottom_toBottomOf="@id/update_pill_color"
        app:layout_constraintDimensionRatio="56:51"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/update_pill_color"
        app:layout_constraintTop_toBottomOf="@id/update_pill_button"
        tools:ignore="RedundantDescriptionCheck,ImageContrastCheck" />

    <ImageButton
        android:id="@+id/update_pill_button"
        android:layout_width="32dp"
        android:layout_height="31dp"
        android:layout_marginBottom="2dp"
        android:layout_weight="1"
        android:background="@color/green_pill"
        android:contentDescription="@string/update_button"
        android:hapticFeedbackEnabled="true"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:src="@android:drawable/stat_notify_sync"
        app:layout_constraintBottom_toTopOf="@+id/delete_pill_button"
        app:layout_constraintDimensionRatio="56:51"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/update_pill_color"
        app:layout_constraintTop_toTopOf="@id/update_pill_color"
        tools:ignore="RedundantDescriptionCheck,ImageContrastCheck" />

    <TextView
        android:id="@+id/pill_uuid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:gravity="center"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/divider_pillUpdate"
        app:layout_constraintEnd_toEndOf="@+id/update_pill_name_holder"
        app:layout_constraintStart_toStartOf="@+id/update_pill_name_holder"
        app:layout_constraintTop_toBottomOf="@+id/update_pill_name_holder"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="b4b9a247-1121-47ad-b754-27d299489fb1" />

    <View
        android:id="@+id/divider_pillUpdate"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        tools:layout_editor_absoluteX="8dp"
        app:layout_constraintTop_toBottomOf="@+id/pill_uuid"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>