<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/pill_button_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:paddingStart="5dp"
    android:paddingEnd="5dp">

        <Button
            android:id="@+id/pill_register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/pill_taken_icon_foreground"
            android:hapticFeedbackEnabled="true"
            app:layout_constraintBottom_toTopOf="@+id/pill_register_button_text"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/pill_create_button"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <Button
            android:id="@+id/pill_create_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/pill_add_icon_foreground"
            android:hapticFeedbackEnabled="true"
            app:layout_constraintBottom_toTopOf="@+id/pill_create_button_text"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@id/pill_delete_button"
            app:layout_constraintStart_toEndOf="@id/pill_register_button"
            app:layout_constraintTop_toTopOf="parent" />


        <Button
            android:id="@+id/pill_delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/pill_disable_icon_foreground"
            android:hapticFeedbackEnabled="true"
            app:layout_constraintBottom_toTopOf="@id/pill_delete_button_text"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@id/pill_history_button"
            app:layout_constraintStart_toEndOf="@id/pill_create_button"
            app:layout_constraintTop_toTopOf="@id/pill_register_button" />


        <Button
            android:id="@+id/pill_history_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/pill_log_icon_foreground"
            android:hapticFeedbackEnabled="true"
            app:layout_constraintBottom_toTopOf="@+id/pill_history_text"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/pill_delete_button"
            app:layout_constraintTop_toTopOf="@id/pill_register_button" />

        <TextView
            android:id="@+id/pill_register_button_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pill_taken"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/pill_register_button"
            app:layout_constraintStart_toStartOf="@id/pill_register_button"
            app:layout_constraintTop_toBottomOf="@+id/pill_register_button" />

        <TextView
            android:id="@+id/pill_create_button_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_pill"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/pill_create_button"
            app:layout_constraintStart_toStartOf="@id/pill_create_button"
            app:layout_constraintTop_toBottomOf="@+id/pill_create_button" />

        <TextView
            android:id="@+id/pill_delete_button_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remove_pill"
            app:layout_constraintBottom_toBottomOf="@id/pill_register_button_text"
            app:layout_constraintEnd_toStartOf="@id/pill_delete_button"
            app:layout_constraintStart_toEndOf="@id/pill_delete_button"
            app:layout_constraintTop_toBottomOf="@id/pill_delete_button" />

        <TextView
            android:id="@+id/pill_history_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pill_history"
            app:layout_constraintBottom_toBottomOf="@id/pill_register_button_text"
            app:layout_constraintEnd_toEndOf="@id/pill_history_button"
            app:layout_constraintStart_toStartOf="@id/pill_history_button"
            app:layout_constraintTop_toBottomOf="@id/pill_history_button" />

</androidx.constraintlayout.widget.ConstraintLayout>